--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -2,8 +2,26 @@
 
 <body>
 
+<div>
+    <form method="post">
+        <input type="text" name="text" placeholder="Write message">
+        <input type="text" name="tag" placeholder="Write tag">
+        <button type="submit">Add</button>
+    </form>
+    <form method="post" action="filter">
+        <input type="text" name="filter">
+        <button type="submit">Search</button>
+    </form>
+</div>
 
-<div>{{some}}</div>
+<div>List of messages</div>
+{{#messages}}
+    <div>
+        <b>{{id}}</b>
+        <span>{{text}}</span>
+        <i>{{tag}}</i>
+    </div>
+{{/messages}}
 </body>
 
 
