--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -3,12 +3,21 @@
 <body>
 
 <div>
+    <form action="/logout" method="post">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
+        <input type="submit" value="Sign Out"/>
+    </form>
+</div>
+
+<div>
     <form method="post">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
         <input type="text" name="text" placeholder="Write message">
         <input type="text" name="tag" placeholder="Write tag">
         <button type="submit">Add</button>
     </form>
     <form method="post" action="filter">
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
         <input type="text" name="filter">
         <button type="submit">Search</button>
     </form>
